# Inside of setup.cfg
[metadata]
name = EAMetatrader
version = 1.0.3
author = EAScript
author_email = ehsanakbariea8@gmail.com
description = Metatrader library for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EAScript/EAMT
project_urls =
    Bug Tracker = https://github.com/EAScript/EAMT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
